--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,24 @@
+# Use a lightweight Node.js base image
 FROM node:18-alpine
+
+# Set working directory
 WORKDIR /usr/src/app
-COPY package.json package-lock.json* ./
+
+# Install dependencies first (for better caching)
+COPY package*.json ./
 RUN npm ci --only=production || npm install
+
+# Copy the rest of the backend source code
 COPY . .
+
+# ✅ Generate Prisma client for Alpine (fixes "Query Engine not found" error)
+RUN npx prisma generate
+
+# ✅ Optional: run database migrations automatically (only if you want auto-sync)
+# RUN npx prisma migrate deploy
+
+# Expose backend port
 EXPOSE 5000
+
+# Start the backend service
 CMD ["node", "src/index.js"]
